bench/graphql-parser.js
// @generated by Peggy 5.1.0.
//
// https://peggyjs.org/


class peg$SyntaxError extends SyntaxError {
  constructor(message, expected, found, location) {
    super(message);
    this.expected = expected;
    this.found = found;
    this.location = location;
    this.name = "SyntaxError";
  }

  format(sources) {
    let str = "Error: " + this.message;
    if (this.location) {
      let src = null;
      const st = sources.find(s => s.source === this.location.source);
      if (st) {
        src = st.text.split(/\r\n|\n|\r/g);
      }
      const s = this.location.start;
      const offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
        ? this.location.source.offset(s)
        : s;
      const loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
      if (src) {
        const e = this.location.end;
        const filler = "".padEnd(offset_s.line.toString().length, " ");
        const line = src[s.line - 1];
        const last = s.line === e.line ? e.column : line.length + 1;
        const hatLen = (last - s.column) || 1;
        str += "\n --> " + loc + "\n"
            + filler + " |\n"
            + offset_s.line + " | " + line + "\n"
            + filler + " | " + "".padEnd(s.column - 1, " ")
            + "".padEnd(hatLen, "^");
      } else {
        str += "\n at " + loc;
      }
    }
    return str;
  }

  static buildMessage(expected, found) {
    function hex(ch) {
      return ch.codePointAt(0).toString(16).toUpperCase();
    }

    const nonPrintable = Object.prototype.hasOwnProperty.call(RegExp.prototype, "unicode")
      ? new RegExp("[\\p{C}\\p{Mn}\\p{Mc}]", "gu")
      : null;
    function unicodeEscape(s) {
      if (nonPrintable) {
        return s.replace(nonPrintable,  ch => "\\u{" + hex(ch) + "}");
      }
      return s;
    }

    function literalEscape(s) {
      return unicodeEscape(s
        .replace(/\\/g, "\\\\")
        .replace(/"/g,  "\\\"")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,          ch => "\\x0" + hex(ch))
        .replace(/[\x10-\x1F\x7F-\x9F]/g, ch => "\\x"  + hex(ch)));
    }

    function classEscape(s) {
      return unicodeEscape(s
        .replace(/\\/g, "\\\\")
        .replace(/\]/g, "\\]")
        .replace(/\^/g, "\\^")
        .replace(/-/g,  "\\-")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,          ch => "\\x0" + hex(ch))
        .replace(/[\x10-\x1F\x7F-\x9F]/g, ch => "\\x"  + hex(ch)));
    }

    const DESCRIBE_EXPECTATION_FNS = {
      literal(expectation) {
        return "\"" + literalEscape(expectation.text) + "\"";
      },

      class(expectation) {
        const escapedParts = expectation.parts.map(
          part => (Array.isArray(part)
            ? classEscape(part[0]) + "-" + classEscape(part[1])
            : classEscape(part))
        );

        return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]" + (expectation.unicode ? "u" : "");
      },

      any() {
        return "any character";
      },

      end() {
        return "end of input";
      },

      other(expectation) {
        return expectation.description;
      },
    };

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
      const descriptions = expected.map(describeExpectation);
      descriptions.sort();

      if (descriptions.length > 0) {
        let j = 1;
        for (let i = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found) {
      return found ? "\"" + literalEscape(found) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  }
}

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  const peg$FAILED = {};
  const peg$source = options.grammarSource;

  const peg$startRuleFunctions = {
    Document: peg$parseDocument,
  };
  let peg$startRuleFunction = peg$parseDocument;

  const peg$c0 = "query";
  const peg$c1 = "mutation";
  const peg$c2 = "subscription";
  const peg$c3 = "(";
  const peg$c4 = ")";
  const peg$c5 = "$";
  const peg$c6 = ":";
  const peg$c7 = ",";
  const peg$c8 = "=";
  const peg$c9 = "{";
  const peg$c10 = "}";
  const peg$c11 = "...";
  const peg$c12 = "fragment";
  const peg$c13 = "on";
  const peg$c14 = "@";
  const peg$c15 = "!";
  const peg$c16 = "[";
  const peg$c17 = "]";
  const peg$c18 = "true";
  const peg$c19 = "false";
  const peg$c20 = "null";
  const peg$c21 = "-";
  const peg$c22 = "0";
  const peg$c23 = ".";
  const peg$c24 = "\"\"\"";
  const peg$c25 = "\"";
  const peg$c26 = "\\";
  const peg$c27 = "/";
  const peg$c28 = "b";
  const peg$c29 = "f";
  const peg$c30 = "n";
  const peg$c31 = "r";
  const peg$c32 = "t";
  const peg$c33 = "u";
  const peg$c34 = "#";

  const peg$r0 = /^[_0-9A-Za-z]/;
  const peg$r1 = /^[1-9]/;
  const peg$r2 = /^[0-9]/;
  const peg$r3 = /^[eE]/;
  const peg$r4 = /^[+\-]/;
  const peg$r5 = /^[^"\\]/;
  const peg$r6 = /^[0-9a-fA-F]/;
  const peg$r7 = /^[_A-Za-z]/;
  const peg$r8 = /^[\t-\n\r ,]/;
  const peg$r9 = /^[^\n\r]/;

  const peg$e0 = peg$literalExpectation("query", false);
  const peg$e1 = peg$literalExpectation("mutation", false);
  const peg$e2 = peg$literalExpectation("subscription", false);
  const peg$e3 = peg$literalExpectation("(", false);
  const peg$e4 = peg$literalExpectation(")", false);
  const peg$e5 = peg$literalExpectation("$", false);
  const peg$e6 = peg$literalExpectation(":", false);
  const peg$e7 = peg$literalExpectation(",", false);
  const peg$e8 = peg$literalExpectation("=", false);
  const peg$e9 = peg$literalExpectation("{", false);
  const peg$e10 = peg$literalExpectation("}", false);
  const peg$e11 = peg$literalExpectation("...", false);
  const peg$e12 = peg$literalExpectation("fragment", false);
  const peg$e13 = peg$literalExpectation("on", false);
  const peg$e14 = peg$classExpectation(["_", ["0", "9"], ["A", "Z"], ["a", "z"]], false, false, false);
  const peg$e15 = peg$literalExpectation("@", false);
  const peg$e16 = peg$literalExpectation("!", false);
  const peg$e17 = peg$literalExpectation("[", false);
  const peg$e18 = peg$literalExpectation("]", false);
  const peg$e19 = peg$literalExpectation("true", false);
  const peg$e20 = peg$literalExpectation("false", false);
  const peg$e21 = peg$literalExpectation("null", false);
  const peg$e22 = peg$literalExpectation("-", false);
  const peg$e23 = peg$literalExpectation("0", false);
  const peg$e24 = peg$classExpectation([["1", "9"]], false, false, false);
  const peg$e25 = peg$classExpectation([["0", "9"]], false, false, false);
  const peg$e26 = peg$literalExpectation(".", false);
  const peg$e27 = peg$classExpectation(["e", "E"], false, false, false);
  const peg$e28 = peg$classExpectation(["+", "-"], false, false, false);
  const peg$e29 = peg$literalExpectation("\"\"\"", false);
  const peg$e30 = peg$literalExpectation("\"", false);
  const peg$e31 = peg$anyExpectation();
  const peg$e32 = peg$classExpectation(["\"", "\\"], true, false, false);
  const peg$e33 = peg$literalExpectation("\\", false);
  const peg$e34 = peg$literalExpectation("/", false);
  const peg$e35 = peg$literalExpectation("b", false);
  const peg$e36 = peg$literalExpectation("f", false);
  const peg$e37 = peg$literalExpectation("n", false);
  const peg$e38 = peg$literalExpectation("r", false);
  const peg$e39 = peg$literalExpectation("t", false);
  const peg$e40 = peg$literalExpectation("u", false);
  const peg$e41 = peg$classExpectation([["0", "9"], ["a", "f"], ["A", "F"]], false, false, false);
  const peg$e42 = peg$classExpectation(["_", ["A", "Z"], ["a", "z"]], false, false, false);
  const peg$e43 = peg$classExpectation([["\t", "\n"], "\r", " ", ","], false, false, false);
  const peg$e44 = peg$literalExpectation("#", false);
  const peg$e45 = peg$classExpectation(["\n", "\r"], true, false, false);

  function peg$f0(defs) {    return defs  }
  function peg$f1(sel) {    return { kind: "OperationDefinition", operation: "query", name: null, variables: [], directives: [], selectionSet: sel }  }
  function peg$f2(op, name, vars, dirs, sel) {    return { kind: "OperationDefinition", operation: op, name, variables: vars || [], directives: dirs || [], selectionSet: sel }  }
  function peg$f3() {    return "query"  }
  function peg$f4() {    return "mutation"  }
  function peg$f5() {    return "subscription"  }
  function peg$f6(defs) {    return defs  }
  function peg$f7(v, t, def) {    return { variable: v, type: t, defaultValue: def }  }
  function peg$f8(name) {    return { kind: "Variable", name }  }
  function peg$f9(v) {    return v  }
  function peg$f10(sels) {    return sels  }
  function peg$f11(alias, name, args, dirs, sel) {    return { alias: alias ? alias[0] : null, name, arguments: args || [], directives: dirs || [], selectionSet: sel || null }  }
  function peg$f12(args) {    return args  }
  function peg$f13(name, value) {    return { name, value }  }
  function peg$f14(name, dirs) {    return { kind: "FragmentSpread", name, directives: dirs || [] }  }
  function peg$f15(cond, dirs, sel) {    return { kind: "InlineFragment", typeCondition: cond, directives: dirs || [], selectionSet: sel }  }
  function peg$f16(name, cond, dirs, sel) {    return { kind: "FragmentDefinition", name, typeCondition: cond, directives: dirs || [], selectionSet: sel }  }
  function peg$f17(name) {    return name  }
  function peg$f18(type) {    return type  }
  function peg$f19(dirs) {    return dirs  }
  function peg$f20(name, args) {    return { name, arguments: args || [] }  }
  function peg$f21(t, nn) {    return nn ? { kind: "NonNull", type: t } : t  }
  function peg$f22(name) {    return { kind: "NamedType", name }  }
  function peg$f23(t) {    return { kind: "ListType", type: t }  }
  function peg$f24() {    return true  }
  function peg$f25() {    return false  }
  function peg$f26() {    return null  }
  function peg$f27(name) {    return { kind: "EnumValue", value: name }  }
  function peg$f28(s) {    return parseInt(s, 10)  }
  function peg$f29(s) {    return parseFloat(s)  }
  function peg$f30(chars) {    return chars.join("")  }
  function peg$f31(chars) {    return chars.join("")  }
  function peg$f32(c) {    return c  }
  function peg$f33(c) {    return c  }
  function peg$f34(s) {    return s  }
  function peg$f35() {    return '"'  }
  function peg$f36() {    return "\\"  }
  function peg$f37() {    return "/"  }
  function peg$f38() {    return "\b"  }
  function peg$f39() {    return "\f"  }
  function peg$f40() {    return "\n"  }
  function peg$f41() {    return "\r"  }
  function peg$f42() {    return "\t"  }
  function peg$f43(d) {    return String.fromCharCode(parseInt(d, 16))  }
  function peg$f44(vals) {    return vals  }
  function peg$f45(fields) {    return Object.fromEntries(fields)  }
  function peg$f46(name, value) {    return [name, value]  }
  let peg$currPos = options.peg$currPos | 0;
  let peg$savedPos = peg$currPos;
  const peg$posDetailsCache = [{ line: 1, column: 1 }];
  let peg$maxFailPos = peg$currPos;
  let peg$maxFailExpected = options.peg$maxFailExpected || [];
  let peg$silentFails = options.peg$silentFails | 0;

  let peg$result;

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos,
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$getUnicode(pos = peg$currPos) {
    const cp = input.codePointAt(pos);
    if (cp === undefined) {
      return "";
    }
    return String.fromCodePoint(cp);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text, ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase, unicode) {
    return { type: "class", parts, inverted, ignoreCase, unicode };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description };
  }

  function peg$computePosDetails(pos) {
    let details = peg$posDetailsCache[pos];
    let p;

    if (details) {
      return details;
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1;
      } else {
        p = pos;
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column,
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    const startPosDetails = peg$computePosDetails(startPos);
    const endPosDetails = peg$computePosDetails(endPos);

    const res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column,
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column,
      },
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseDocument() {
    let s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$currPos;
    s3 = peg$parse_();
    s4 = peg$parseDefinition();
    if (s4 !== peg$FAILED) {
      s2 = s4;
    } else {
      peg$currPos = s2;
      s2 = peg$FAILED;
    }
    if (s2 !== peg$FAILED) {
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$currPos;
        s3 = peg$parse_();
        s4 = peg$parseDefinition();
        if (s4 !== peg$FAILED) {
          s2 = s4;
        } else {
          peg$currPos = s2;
          s2 = peg$FAILED;
        }
      }
    } else {
      s1 = peg$FAILED;
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      peg$savedPos = s0;
      s0 = peg$f0(s1);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseDefinition() {
    let s0;

    s0 = peg$parseOperationDefinition();
    if (s0 === peg$FAILED) {
      s0 = peg$parseFragmentDefinition();
    }

    return s0;
  }

  function peg$parseOperationDefinition() {
    let s0, s1, s2, s3, s4, s5, s6, s7, s8, s9;

    s0 = peg$currPos;
    s1 = peg$parseSelectionSet();
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$f1(s1);
    }
    s0 = s1;
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parseOperationType();
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        s3 = peg$parseName();
        if (s3 === peg$FAILED) {
          s3 = null;
        }
        s4 = peg$parse_();
        s5 = peg$parseVariableDefinitions();
        if (s5 === peg$FAILED) {
          s5 = null;
        }
        s6 = peg$parse_();
        s7 = peg$parseDirectives();
        if (s7 === peg$FAILED) {
          s7 = null;
        }
        s8 = peg$parse_();
        s9 = peg$parseSelectionSet();
        if (s9 !== peg$FAILED) {
          peg$savedPos = s0;
          s0 = peg$f2(s1, s3, s5, s7, s9);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    }

    return s0;
  }

  function peg$parseOperationType() {
    let s0, s1;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 5) === peg$c0) {
      s1 = peg$c0;
      peg$currPos += 5;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e0); }
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$f3();
    }
    s0 = s1;
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      if (input.substr(peg$currPos, 8) === peg$c1) {
        s1 = peg$c1;
        peg$currPos += 8;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e1); }
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$f4();
      }
      s0 = s1;
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        if (input.substr(peg$currPos, 12) === peg$c2) {
          s1 = peg$c2;
          peg$currPos += 12;
        } else {
          s1 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e2); }
        }
        if (s1 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$f5();
        }
        s0 = s1;
      }
    }

    return s0;
  }

  function peg$parseVariableDefinitions() {
    let s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 40) {
      s1 = peg$c3;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e3); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      s3 = [];
      s4 = peg$parseVariableDefinition();
      if (s4 !== peg$FAILED) {
        while (s4 !== peg$FAILED) {
          s3.push(s4);
          s4 = peg$parseVariableDefinition();
        }
      } else {
        s3 = peg$FAILED;
      }
      if (s3 !== peg$FAILED) {
        s4 = peg$parse_();
        if (input.charCodeAt(peg$currPos) === 41) {
          s5 = peg$c4;
          peg$currPos++;
        } else {
          s5 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e4); }
        }
        if (s5 !== peg$FAILED) {
          peg$savedPos = s0;
          s0 = peg$f6(s3);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseVariableDefinition() {
    let s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 36) {
      s1 = peg$c5;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e5); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseName();
      if (s2 !== peg$FAILED) {
        s3 = peg$parse_();
        if (input.charCodeAt(peg$currPos) === 58) {
          s4 = peg$c6;
          peg$currPos++;
        } else {
          s4 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e6); }
        }
        if (s4 !== peg$FAILED) {
          s5 = peg$parse_();
          s6 = peg$parseType();
          if (s6 !== peg$FAILED) {
            s7 = peg$parse_();
            s8 = peg$parseDefaultValue();
            if (s8 === peg$FAILED) {
              s8 = null;
            }
            s9 = peg$parse_();
            if (input.charCodeAt(peg$currPos) === 44) {
              s10 = peg$c7;
              peg$currPos++;
            } else {
              s10 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$e7); }
            }
            if (s10 === peg$FAILED) {
              s10 = null;
            }
            s11 = peg$parse_();
            peg$savedPos = s0;
            s0 = peg$f7(s2, s6, s8);
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseVariable() {
    let s0, s1, s2;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 36) {
      s1 = peg$c5;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e5); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseName();
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s0 = peg$f8(s2);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseDefaultValue() {
    let s0, s1, s2, s3;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 61) {
      s1 = peg$c8;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e8); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      s3 = peg$parseValue();
      if (s3 !== peg$FAILED) {
        peg$savedPos = s0;
        s0 = peg$f9(s3);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseSelectionSet() {
    let s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 123) {
      s1 = peg$c9;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e9); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      s3 = [];
      s4 = peg$parseSelection();
      if (s4 !== peg$FAILED) {
        while (s4 !== peg$FAILED) {
          s3.push(s4);
          s4 = peg$parseSelection();
        }
      } else {
        s3 = peg$FAILED;
      }
      if (s3 !== peg$FAILED) {
        s4 = peg$parse_();
        if (input.charCodeAt(peg$currPos) === 125) {
          s5 = peg$c10;
          peg$currPos++;
        } else {
          s5 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e10); }
        }
        if (s5 !== peg$FAILED) {
          peg$savedPos = s0;
          s0 = peg$f10(s3);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseSelection() {
    let s0;

    s0 = peg$parseFragmentSpread();
    if (s0 === peg$FAILED) {
      s0 = peg$parseInlineFragment();
      if (s0 === peg$FAILED) {
        s0 = peg$parseField();
      }
    }

    return s0;
  }

  function peg$parseField() {
    let s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11;

    s0 = peg$currPos;
    s1 = peg$currPos;
    s2 = peg$parseName();
    if (s2 !== peg$FAILED) {
      s3 = peg$parse_();
      if (input.charCodeAt(peg$currPos) === 58) {
        s4 = peg$c6;
        peg$currPos++;
      } else {
        s4 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e6); }
      }
      if (s4 !== peg$FAILED) {
        s5 = peg$parse_();
        s2 = [s2, s3, s4, s5];
        s1 = s2;
      } else {
        peg$currPos = s1;
        s1 = peg$FAILED;
      }
    } else {
      peg$currPos = s1;
      s1 = peg$FAILED;
    }
    if (s1 === peg$FAILED) {
      s1 = null;
    }
    s2 = peg$parseName();
    if (s2 !== peg$FAILED) {
      s3 = peg$parse_();
      s4 = peg$parseArguments();
      if (s4 === peg$FAILED) {
        s4 = null;
      }
      s5 = peg$parse_();
      s6 = peg$parseDirectives();
      if (s6 === peg$FAILED) {
        s6 = null;
      }
      s7 = peg$parse_();
      s8 = peg$parseSelectionSet();
      if (s8 === peg$FAILED) {
        s8 = null;
      }
      s9 = peg$parse_();
      if (input.charCodeAt(peg$currPos) === 44) {
        s10 = peg$c7;
        peg$currPos++;
      } else {
        s10 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e7); }
      }
      if (s10 === peg$FAILED) {
        s10 = null;
      }
      s11 = peg$parse_();
      peg$savedPos = s0;
      s0 = peg$f11(s1, s2, s4, s6, s8);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseArguments() {
    let s0, s1, s2, s3, s4, s5;
